--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,6 @@ html
         p #{temperature}&deg;
             span #{summary}
             canvas#icon1(width=128, height=128)
-        script(src="/skycons.js")
+        script(src="../skycons.js")
         script var applicationVariables = !{JSON.stringify(applicationVariables)}
-        script(src="/App.js")
+        script(src="../App.js")
