--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,21 @@ html
     head
         meta(http-equiv="Content-Type", content="text/html; charset=ISO-8859-1")
         title Koa Weather App
+        link(rel="stylesheet",
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous")
     body
-        h1 #{city}, #{state}
-        p #{temperature}&deg;
-            span #{summary}
-            canvas#icon1(width=128, height=128)
+        div#react-container
+        script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous")
+        script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous")
+        script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous")
         script(src="../skycons.js")
         script var applicationVariables = !{JSON.stringify(applicationVariables)}
-        script(src="../App.js")
+        script(src="../dist/App.js")
