--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,10 @@ html
             href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous")
+        link(rel="stylesheet",
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+        link(rel="stylesheet", href="../dist/main.css")
+        link(rel="manifest", href="../manifest.json")
     body
         div#react-container
         script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -18,5 +22,4 @@ html
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous")
         script(src="../skycons.js")
-        script var applicationVariables = !{JSON.stringify(applicationVariables)}
         script(src="../dist/App.js")
